2011-06-07  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/pam_namespace.c (root_shared): New
	function to detect shared / mount.
	(pam_sm_open_session): Call the root_shared() and enable
	private mounts based on that.
	* modules/pam_namespace/pam_namespace.8.xml: Document the
	automatic detection of shared / mount.

2011-06-06  Tomas Mraz  <tm@t8m.info>

	* modules/pam_group/pam_group.c (shift_bytes): Removed.
	(shift_buf, trim_spaces): Added new functions.
	(read_field): Thorough rewrite of the parsing.
	(check_account): read_field() now uses state information. No
	extra read_field() call at the end of configuration line.
	* modules/pam_time/pam_time.c (shift_bytes): Removed.
	(shift_buf, trim_spaces): Added new functions.
	(read_field): Thorough rewrite of the parsing.
	(check_account): read_field() now uses state information. No
	extra read_field() call at the end of configuration line.

	* modules/pam_namespace/pam_namespace.h: Define the MS_PRIVATE and
	MS_REC flags if they are not in sys/mount.h.

2011-06-06  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>

	* po/LINGUAS: Add vietnamese.
	* po/vi.po: Add vietnamese translation.

2011-06-02  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/pam_namespace.c (protect_dir): Add parameter
	to always do protect mount the last directory in the path.
	(check_inst_parent, create_polydir): Update the protect_dir() call.
	(ns_setup): Likewise and add the MS_PRIVATE mount() call.
	(pam_sm_open_session): Check the mount_private option.
	* modules/pam_namespace/pam_namespace.h: Add the PAMNS_MOUNT_PRIVATE.
	* modules/pam_namespace/pam_namespace.8.xml: Document the mount_private
	option.

	* modules/pam_cracklib/pam_cracklib.c (str_lower): Make it no-op
	on NULL strings.
	(password_check): Guard for NULLs returned from memory allocation.

	* modules/pam_filter/pam_filter.c (process_args): Guard for error return
	from pam_get_user().

	* modules/pam_echo/pam_echo.c (replace_and_print): Guard for error return